# pi-pico-examples

./: CMakeLists.txt
DS18B20/: CMakeLists.txt  DS18B20.c
MLX90614/: CMakeLists.txt  mlx90614.c
MLX90614/driver/: mlx90614_driver.c  mlx90614_driver_common.h  mlx90614_driver_pal.c
alarm/: CMakeLists.txt  alarm.c
serial_input/: CMakeLists.txt  serial_input.c
test/: CMakeLists.txt  test.c
